# unibox

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  .repomixignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_dev.md  duties.py  index.html  mkdocs.yml  objects.inv  prd.json  progress.txt  prompt.md  pyproject.toml  ralph.sh  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
contributing/: index.html
credits/: index.html
design/: index.html
docs/: 20260106_hf-json-saves.md  design.md  getting_started_credentials.md  getting_started_quickstart.md  guides_hugging_face.md  guides_s3.md  index.md  recipes.md  supported_formats.md  utilities.md
docs/.overrides/partials/: comments.html
docs_llm/: 20260106_docs-improvements.md  20260125_cdc_parquet  argilla_docs_guide.md
getting_started_credentials/: index.html
getting_started_quickstart/: index.html
guides_hugging_face/: index.html
guides_s3/: index.html
license/: index.html
notebooks/: eval_s3_uploads.ipynb  test_basics.ipynb  test_hf_push_meta.ipynb  test_huggingface.ipynb  test_logger.ipynb  test_tmp.ipynb
noteooks/: test_general.ipynb  test_jsonl_fail.jsonl
old/noteooks/: files:.py  test_general.ipynb  test_resizer.ipynb  test_widget.ipynb
old/unibox/: __init__.py
old/unibox/processing/: file_mover.py  image_resizer.py
old/unibox/utils/: s3_client.py  uni_logger.py  uni_resizer.py  uni_traverser.py  utils.py
recipes/: index.html
reference/SUMMARY/: index.html
reference/unibox/: index.html
reference/unibox/backends/: index.html
reference/unibox/backends/backend_router/: index.html
reference/unibox/backends/base_backend/: index.html
reference/unibox/backends/hf_hybrid_backend/: index.html
reference/unibox/backends/http_backend/: index.html
reference/unibox/backends/local_backend/: index.html
reference/unibox/backends/s3_backend/: index.html
reference/unibox/cli/: index.html
reference/unibox/debug/: index.html
reference/unibox/loaders/: index.html
reference/unibox/loaders/base_loader/: index.html
reference/unibox/loaders/cdc_parquet_loader/: index.html
reference/unibox/loaders/csv_loader/: index.html
reference/unibox/loaders/hf_dataset_loader/: index.html
reference/unibox/loaders/image_loder/: index.html
reference/unibox/nb_helpers/: index.html
reference/unibox/unibox/: index.html
reference/unibox/utils/: index.html
scripts/: benchmark_python.py  benchmark_results.txt  gen_credits.py  make  remove_imgs_from_notebooks.py
search/: search_index.json
skills/file-handling/: SKILL.md
skills/file-handling/references/: unibox-file-handling.md
src/unibox/: __init__.py  __main__.py  cli.py  debug.py  unibox.py
src/unibox/backends/: README.md  backend_router.py  base_backend.py  hf_api_backend.py  hf_backend.py  hf_datasets_backend.py  hf_hybrid_backend.py  hf_router_backend.py  http_backend.py  local_backend.py  s3_backend.py
src/unibox/loaders/: README.md  base_loader.py  cdc_parquet_loader.py  csv_loader.py  hf_dataset_loader.py  image_loder.py  json_loader.py  jsonl_loader.py  loader_router.py  parquet_loader.py  toml_loader.py  txt_loader.py  yaml_loader.py
src/unibox/nb_helpers/: ipython_utils.py  uni_peeker.py
src/unibox/utils/: README.md  __init__.py  constants.py  credentials_manager.py  df_utils.py  globals.py  image_utils.py  io_utils.py  llm_api.py  logger.py  s3_client.py  utils.py
supported_formats/: index.html
tests/: README.md  __init__.py  test_cli.py  test_df_utils.py  test_image_resizer.py  test_loaders.py  test_unibox.py  test_utils.py
tests/backends/: test_local_backend.py  test_s3_backend.py
tests/test_files/: sample.parquet  sample.toml  sample.txt  sample.yaml
unibox/: __init__.py  cli.py
unibox/processing/: file_mover.py  file_renamer.py  image_resizer.py  image_resizer_next.py
unibox/setup/: __init__.py  setups.py
unibox/uni_class/: data_loader.py  logger.py
unibox/utils/: constants.py  data_loader.py  ipython_utils.py  logger.py  s3_client.py  uni_loader.py  uni_logger.py  uni_merger.py  uni_peeker.py  uni_resizer.py  uni_saver.py  uni_traverser.py  utils.py
utilities/: index.html
(+19 files in other folders)
