[tool.poetry]
name = "unibox"
version = "0.4.0"
description = "Unibox provides unified interface for common file operations."
authors = ["yada <trojblue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trojblue/unibox"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.5"
tomli = "^2.0.1"
omegaconf = "^2.3.0"
pillow = "^10.0.0"
tqdm = "^4.65.0"
colorlog = "^6.7.0"
pandas = "*"
pyarrow = "*"
boto3 = "^1.28.76"
requests = "^2.31.0"
orjson = "^3.9.10"


[tool.poetry.scripts]
unibox = 'unibox.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
